--- a/src/GettingStartedApplication/WebService/Views/Home/Index.cshtml
+++ b/src/GettingStartedApplication/WebService/Views/Home/Index.cshtml
@@ -1,143 +1,78 @@
 ﻿@{
-    ViewData["Title"] = "Home Page";
+    ViewData["Title"] = "Service Fabric Application Template";
 }
 
-<div id="myCarousel" class="carousel slide" data-ride="carousel" data-interval="6000">
-    <ol class="carousel-indicators">
-        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-        <li data-target="#myCarousel" data-slide-to="1"></li>
-        <li data-target="#myCarousel" data-slide-to="2"></li>
-        <li data-target="#myCarousel" data-slide-to="3"></li>
-    </ol>
-    <div class="carousel-inner" role="listbox">
-        <div class="item active">
-            <img src="~/images/banner1.svg" alt="ASP.NET" class="img-responsive"/>
-            <div class="carousel-caption" role="option">
-                <p>
-                    Learn how to build ASP.NET apps that can run anywhere.
-                    <a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkID=525028&clcid=0x409">
-                        Learn More
-                    </a>
-                </p>
-            </div>
-        </div>
-        <div class="item">
-            <img src="~/images/banner2.svg" alt="Visual Studio" class="img-responsive"/>
-            <div class="carousel-caption" role="option">
-                <p>
-                    There are powerful new features in Visual Studio for building modern web apps.
-                    <a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkID=525030&clcid=0x409">
-                        Learn More
-                    </a>
-                </p>
-            </div>
-        </div>
-        <div class="item">
-            <img src="~/images/banner3.svg" alt="Package Management" class="img-responsive"/>
-            <div class="carousel-caption" role="option">
-                <p>
-                    Bring in libraries from NuGet, Bower, and npm, and automate tasks using Grunt or Gulp.
-                    <a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkID=525029&clcid=0x409">
-                        Learn More
-                    </a>
-                </p>
-            </div>
-        </div>
-        <div class="item">
-            <img src="~/images/banner4.svg" alt="Microsoft Azure" class="img-responsive"/>
-            <div class="carousel-caption" role="option">
-                <p>
-                    Learn how Microsoft's Azure cloud platform allows you to build, deploy, and scale web apps.
-                    <a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkID=525027&clcid=0x409">
-                        Learn More
-                    </a>
-                </p>
-            </div>
-        </div>
-    </div>
-    <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
-        <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-    </a>
-    <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
-        <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-    </a>
-</div>
-
 <div class="row">
-    <div class="col-md-3">
-        <h2>Application uses</h2>
-        <ul>
-            <li>Sample pages using ASP.NET Core MVC</li>
-            <li><a href="http://go.microsoft.com/fwlink/?LinkId=518004">Bower</a> for managing client-side libraries</li>
-            <li>Theming using <a href="http://go.microsoft.com/fwlink/?LinkID=398939">Bootstrap</a></li>
-        </ul>
+    <div class="col-sm-4">
+        <h3>Stateless Backend Service</h3>
+        <p>The stateless backend service increments a counter every second.</p>
+        <p>Click the button to get the current count from the service.</p>
+        <button class="btn btn-primary" onclick="getStatelessBackendValue()" type="button" id="getStatelessBackendValue">Get count</button>
+        <div class="row" style="padding-top: 10px">
+            <div class="form-group col-md-12">
+                <label>Stateless Backend Count: </label>
+                <label id="statelessBackendCount" class="text-info">0</label>
+            </div>
+        </div>
     </div>
-    <div class="col-md-3">
-        <h2>How to</h2>
-        <ul>
-            <li>
-                <a href="http://go.microsoft.com/fwlink/?LinkID=398600">Add a Controller and View</a>
-            </li>
-            <li>
-                <a href="http://go.microsoft.com/fwlink/?LinkID=699562">Add an appsetting in config and access it in app.</a>
-            </li>
-            <li>
-                <a href="http://go.microsoft.com/fwlink/?LinkId=699315">Manage User Secrets using Secret Manager.</a>
-            </li>
-            <li>
-                <a href="http://go.microsoft.com/fwlink/?LinkId=699316">Use logging to log a message.</a>
-            </li>
-            <li>
-                <a href="http://go.microsoft.com/fwlink/?LinkId=699317">Add packages using NuGet.</a>
-            </li>
-            <li>
-                <a href="http://go.microsoft.com/fwlink/?LinkId=699318">Add client packages using Bower.</a>
-            </li>
-            <li>
-                <a href="http://go.microsoft.com/fwlink/?LinkId=699319">Target development, staging or production environment.</a>
-            </li>
-        </ul>
+
+    <div class="col-sm-4">
+        <h3>Stateful Backend Service</h3>
+        <p>The stateful backend service stores a dictionary of key/value pairs of two strings in a reliable collection.</p>
+        <p>You can add a key/value pair of two strings in the stateful service here.</p>
+        <div class="row">
+            <div class="col-md-12">
+                <label>Add a key/value pair of two strings</label>
+                <div class="form-group col-md-6">
+                    <input type="text" class="form-control" id="keyInput" placeholder="key">
+                </div>
+                <div class="form-group col-md-6">
+                    <input type="text" class="form-control" id="valueInput" placeholder="value">
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-12">
+                <div class="col-md-6">
+                    <button class="btn btn-primary btn-block" onclick="addStatefulBackendServiceKeyValuePair()" type="button" id="addStatefulBackendServiceKeyValuePair">Add</button>
+                </div>
+                <div class="col-md-6">
+                    <button class="btn btn-primary btn-block" onclick="getStatefulBackendServiceDictionary()" type="button" id="getStatefulBackendServiceDictionary">Get All</button>
+                </div>
+            </div>
+        </div>
+        <div class="row top-buffer">
+            <div class="col-md-12">
+                <table class="table table-striped" id="statefulBackendServiceTable">
+                    <tr>
+                        <th>Key</th>
+                        <th>Value</th>
+                    </tr>
+                </table>
+            </div>
+        </div>
     </div>
-    <div class="col-md-3">
-        <h2>Overview</h2>
-        <ul>
-            <li>
-                <a href="http://go.microsoft.com/fwlink/?LinkId=518008">Conceptual overview of what is ASP.NET Core</a>
-            </li>
-            <li>
-                <a href="http://go.microsoft.com/fwlink/?LinkId=699320">Fundamentals of ASP.NET Core such as Startup and middleware.</a>
-            </li>
-            <li>
-                <a href="http://go.microsoft.com/fwlink/?LinkId=398602">Working with Data</a>
-            </li>
-            <li>
-                <a href="http://go.microsoft.com/fwlink/?LinkId=398603">Security</a>
-            </li>
-            <li>
-                <a href="http://go.microsoft.com/fwlink/?LinkID=699321">Client side development</a>
-            </li>
-            <li>
-                <a href="http://go.microsoft.com/fwlink/?LinkID=699322">Develop on different platforms</a>
-            </li>
-            <li>
-                <a href="http://go.microsoft.com/fwlink/?LinkID=699323">Read more on the documentation site</a>
-            </li>
-        </ul>
-    </div>
-    <div class="col-md-3">
-        <h2>Run & Deploy</h2>
-        <ul>
-            <li>
-                <a href="http://go.microsoft.com/fwlink/?LinkID=517851">Run your app</a>
-            </li>
-            <li>
-                <a href="http://go.microsoft.com/fwlink/?LinkID=517853">Run tools such as EF migrations and more</a>
-            </li>
-            <li>
-                <a href="http://go.microsoft.com/fwlink/?LinkID=398609">Publish to Microsoft Azure Web Apps</a>
-            </li>
-        </ul>
+
+    <div class="col-sm-4">
+        <h3>Actor Service</h3>
+        <p>You can create new actors that will increment their count every second.</p>
+        <P>Create a new actor by clicking the <strong>New Actor button</strong>.</P>
+        <p>Get a list of actors and their current count by pressing the <strong>Get actor(s) and count</strong> button.</p>
+        <div class="row">
+            <div class="col-md-4"><button class="btn btn-primary" onclick="newActor()" type="button" id="newActor">New actor</button></div>
+            <div class="col-md-4"><button class="btn btn-primary" onclick="getActors()" type="button" id="getActors">Get actor(s) and count</button></div>
+        </div>
+        <div class="row" style="padding-top: 10px">
+            <div class="col-md-12">
+                <table class="table table-striped">
+                    <tr>
+                        <th>Actor ID</th>
+                        <th>Count</th>
+                        <td>1</td>
+                        <td>1</td>
+                    </tr>
+                </table>
+            </div>
+        </div>
     </div>
 </div>
