--- a/src/GettingStartedApplication/WebService/Views/Shared/_Layout.cshtml
+++ b/src/GettingStartedApplication/WebService/Views/Shared/_Layout.cshtml
@@ -6,87 +6,69 @@
     <title>@ViewData["Title"]</title>
 
     <environment names="Development">
-        <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
-        <link rel="stylesheet" href="~/css/site.css" />
+        <link rel="stylesheet" href="~/css/light.min.css">
+        <link rel="stylesheet" href="~/css/lib.min.css">
     </environment>
     <environment names="Staging,Production">
-        <link rel="stylesheet" href="https://ajax.aspnetcdn.com/ajax/bootstrap/3.3.6/css/bootstrap.min.css"
-              asp-fallback-href="~/lib/bootstrap/dist/css/bootstrap.min.css"
-              asp-fallback-test-class="sr-only" asp-fallback-test-property="position" asp-fallback-test-value="absolute" />
-        <link rel="stylesheet" href="~/css/site.min.css" asp-append-version="true" />
+        <link rel="stylesheet" href="~/css/light.min.css" asp-append-version="true">
+        <link rel="stylesheet" href="~/css/lib.min.css" asp-append-version="true">
     </environment>
 
-    @*<!-- Bootstrap resources -->
-        <!-- Latest compiled and minified CSS -->
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
-              crossorigin="anonymous">
-        <!-- Optional theme -->
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp"
-              crossorigin="anonymous">
-        <!-- Latest compiled and minified JavaScript -->
-        <!--  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
-            crossorigin="anonymous"></script>-->*@
+    <style>
+        .top-buffer { padding-top:10px; }
+    </style>
+
 </head>
+
 <body>
 
-    <!-- Commented out navigation as we will have only one page-->
-    @*<div class="navbar navbar-inverse navbar-fixed-top">
-            <div class="container">
-                <div class="navbar-header">
-                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                        <span class="sr-only">Toggle navigation</span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </button>
-                    <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">WebService</a>
-                </div>
-                <div class="navbar-collapse collapse">
-                    <ul class="nav navbar-nav">
-                        <li>
-                            <a asp-area="" asp-controller="Home" asp-action="Index">Home</a>
-                        </li>
-                        <li>
-                            <a asp-area="" asp-controller="Home" asp-action="About">About</a>
-                        </li>
-                        <li>
-                            <a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a>
-                        </li>
-                    </ul>
-                </div>
+    <!-- Navigation Bar -->
+    <div class="navbar navbar-inverse">
+        <div class="container">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="/">Home</a>
             </div>
-        </div>*@
-
-    <div class="container jumbotron">
-        <h1>Service Fabric Application</h1>
-        <p class="">This application is aimed at helping you get a good introduction to developing Service Fabric applications.</p>
-        <p>The application consists of four services and shows how the different service types works and can communicate.</p>
+            <div class="navbar-collapse collapse">
+                <ul class="nav navbar-nav">
+                    <li>
+                        <a href="/Home/Stateless">Stateless</a>
+                    </li>
+                    <li>
+                        <a href="/Home/Stateful">Stateful</a>
+                    </li>
+                    <li>
+                        <a href="/Home/Actor">Actor</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
     </div>
 
+    <!-- Content -->
     <div class="container body-content">
+
+        <!-- Heading row -->
+        <div class="row">
+            <div class="col-md-12">
+                <h1>Service Fabric Application</h1>
+                <p class="">This application is aimed at helping you get a good introduction to developing Service Fabric applications.</p>
+                <p>The application consists of four services and shows how the different service types works and can communicate.</p>
+            </div>
+        </div>
+
         @RenderBody()
-        <hr />
-        <footer>
-            <p>@ViewData["Title"]</p>
-        </footer>
+
     </div>
 
     <environment names="Development">
-        <script src="~/lib/jquery/dist/jquery.js"></script>
-        <script src="~/lib/bootstrap/dist/js/bootstrap.js"></script>
         <script src="~/js/site.js" asp-append-version="true"></script>
     </environment>
     <environment names="Staging,Production">
-        <script src="https://ajax.aspnetcdn.com/ajax/jquery/jquery-2.2.0.min.js"
-                asp-fallback-src="~/lib/jquery/dist/jquery.min.js"
-                asp-fallback-test="window.jQuery">
-
-        </script>
-        <script src="https://ajax.aspnetcdn.com/ajax/bootstrap/3.3.6/bootstrap.min.js"
-                asp-fallback-src="~/lib/bootstrap/dist/js/bootstrap.min.js"
-                asp-fallback-test="window.jQuery && window.jQuery.fn && window.jQuery.fn.modal">
-
-        </script>
         <script src="~/js/site.min.js" asp-append-version="true"></script>
     </environment>
 
