WebSrevice: Controller updates to just return Json, fixed UI graphics, changed to use minifies javascript.

--- a/src/GettingStartedApplication/WebService/Views/Home/Stateful.cshtml
+++ b/src/GettingStartedApplication/WebService/Views/Home/Stateful.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewData["Title"] = "Service Fabric Application Template";
+    ViewData["Title"] = "SF OneApp - Stateful";
 }
 
  <!-- Content Row -->
