Implementing actor and stateless service communication.

--- a/src/GettingStartedApplication/WebService/Views/Home/Actor.cshtml
+++ b/src/GettingStartedApplication/WebService/Views/Home/Actor.cshtml
@@ -9,7 +9,8 @@
     <div class="col-md-12">
         <h3>Actor Service</h3>
         <p>You can create new actors that will increment their count every second.</p>
-        <p>Create a new actor by clicking the <strong>New Actor button</strong>. Get a list of actors and their current count by pressing the <strong>Get actor(s) and count</strong> button.</p>
+        <p>Create a new actor by clicking the <strong>New Actor button</strong>. Get a list of actors and their current count by pressing the <strong>Get actor(s) and count</strong> button.
+        </p>
 
         <!-- Button -->
         <div class="row">
