UI Updates, Configured WebService to listen on port 80

--- a/src/GettingStartedApplication/WebService/Views/Home/Actor.cshtml
+++ b/src/GettingStartedApplication/WebService/Views/Home/Actor.cshtml
@@ -13,8 +13,8 @@
             <div class="col-md-3">
                 <div class="panel">
                     <div class="panel-heading">
-                        <button class="btn btn-primary btn-block" onclick="newActor()" type="button" id="newActor">New Actor</button>
-                        <button class="btn btn-primary btn-block" onclick="getActorCount()" type="button" id="getActorCount">Get # of Actors</button>
+                        <button class="btn btn-primary btn-block" onclick="newActor()" type="button" id="newActor" tabindex="1">New Actor</button>
+                        <button class="btn btn-primary btn-block" onclick="getActorCount()" type="button" id="getActorCount" tabindex="2">Get # of Actors</button>
                     </div>
                     <div class="panel-body">
                         <h1 class="text-center no-margin" id="countDisplay">0</h1>
