--- a/src/GettingStartedApplication/WebService/Views/Home/Index.cshtml
+++ b/src/GettingStartedApplication/WebService/Views/Home/Index.cshtml
@@ -3,6 +3,14 @@
 }
 <!-- Content Row -->
 <div class="row">
+    <!-- Heading row -->
+    <div class="row">
+        <div class="col-md-12">
+            <h1>Service Fabric Application</h1>
+            <p class="">This application is aimed at helping you get a good introduction to developing Service Fabric applications.</p>
+            <p>The application consists of four services and shows how the different service types works and can communicate.</p>
+        </div>
+    </div>
     <!-- Service column -->
     <div class="col-md-12">
         <h3>Docs docs docs...</h3>
