--- a/src/GettingStartedApplication/WebService/Views/Home/Stateless.cshtml
+++ b/src/GettingStartedApplication/WebService/Views/Home/Stateless.cshtml
@@ -12,7 +12,7 @@
             <div class="col-md-3">
                 <div class="panel">
                     <div class="panel-heading">
-                        <button class="btn btn-primary btn-block" onclick="getStatelessBackendCount()" type="button" id="getStatelessBackendCount">Get Count</button>
+                        <button class="btn btn-primary btn-block" onclick="getStatelessBackendCount()" type="button" id="getStatelessBackendCount" tabindex="1">Get Count</button>
                     </div>
                     <div class="panel-body">
                         <h1 class="text-center no-margin" id="countDisplay">0</h1>
